--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ version3/WebRoot/viewuploads.php
 version3/WebRoot/uploads/20190822_190126.jpg
 version3/WebRoot/uploads/20190823_135803.jpg
 version3/WebRoot/uploads/logo.png
+version3/WebRoot/_index.php
+version3/WebRoot/.htaccess
+version3/WebRoot/router.php
